--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,23 @@ img {
    color: var(--color-white);
    border-color: var(--color-white);
 }
+/* ============ fixed top ============ */
+.btn__top {
+   position: fixed;
+   bottom: 10px;
+   right: 10px;
+   padding: .4rem;
+   border-radius: 50%;
+   background-color: var(--color-bg2);
+   color: var(--color-danger);
+   font-size: 1.2rem;
+   cursor: pointer;
+   transition: var(--transition);
+}
+.btn__top:hover {
+   transform: scale(1.1);
+   box-shadow: 0 0 2rem rgba(0, 0, 0, 0.3);
+}
 /* =========================== NAVBAR =========================== */
 /* chang background nav when scroll*/
 .window-scroll {
